# gfx-to-linux

./: Makefile  meson.build  meson_options.txt
data/: gfx2linux-agent.desktop  gfx2linux.openrc  gfx2linux.systemd  gfx2linux.sysvinit  keycodes.json  page.html  script.js  styles.css
debian/: changelog  control  postinst
server/: main.c  page.html  parse.c  parse.h
src/: agent.c  gfx2linux.h  main.c  notify.c  page.html  parse.c  uinput.c  webservice.c  websocket.c
src/client/: keyboard.json  keycodes.json  page.html  script.js  styles.css
tools/: html2c.sh
